<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tactfactory.kikivyhun.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/textViewAuthentification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_authentication" />

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textViewAuthentification"
            android:id="@+id/editTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edit_text_login" />

        <EditText
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editTextLogin"
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/edit_text_password" />

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editTextPassword"
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_connect" />

        <CheckBox
            android:layout_centerHorizontal="true"
            android:layout_below="@id/buttonConnect"
            android:id="@+id/checkBoxPasswordSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_password_save" />

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/checkBoxPasswordSave"
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
